Parte 2 de 20. Lista libros UI

--- a/angular/tsconfig.json
+++ b/angular/tsconfig.json
@@ -27,6 +27,7 @@
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
+    "strictTemplates": true,
     "enableI18nLegacyMessageIdFormat": false
   }
 }
